--- a/perber/views/themes/default/layout.jade
+++ b/perber/views/themes/default/layout.jade
@@ -18,7 +18,7 @@ html(class="no-js", lang="en")
 
         meta(name="description", content="")
         meta(name="author", content="hanjiyun")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1, user-scalable=no")
 
         link(rel="stylesheet", href="/css/semantic.min.css")
         link(rel="stylesheet", href="/css/font-awesome.min.css")
