modify README. add text input limit.

--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -15,7 +15,7 @@ block content
             .chat-input
                 .ui.form
                     .field
-                        textarea(placeholder="Say something")
+                        textarea(placeholder="Say something", maxlength="240")
 
             .chat-list
                 .chat
