--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -20,6 +20,8 @@ block content
             .chat-list
                 .chat
 
+    .noticeWrap
+
     audio(id="chatAudio")
         source(src="/audio/notify.ogg", type="audio/ogg")
         source(src="/audio/notify.mp3", type="audio/mpeg")
