--- a/perber/public/css/perber.css
+++ b/perber/public/css/perber.css
@@ -755,7 +755,13 @@ body{
 }
 
 .ui.bottom.attached.progress.green{
+    /*width: 0%;*/
+    /*margin-top: -4px;*/
     border-radius: 0;
+}
+
+.ui.bottom.attached.progress.green .bar{
+    width: 0%;
 }
 
 
@@ -1382,8 +1388,10 @@ Responsive
 
 
 
-
-
+    
+    #txt_serverPath{
+        display: none;
+    }
     thead {
         background-color: #efefef;
     }
