--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -12,29 +12,16 @@ block content
                     i(class="fa fa-question-circle")
                     span Usage
 
-            .chat-input(data-bucket="#{bucket_name}")
+            #drop_zone.chat-input(data-bucket="#{bucket_name}")
                 .ui.form
                     .field
                         textarea(placeholder="Say something", maxlength="240")
+                #upimg
 
             .chat-list
                 .chat
 
 
-            .fileupload.fileupload-new(style="width:300px;margin-top:400px;", data-provides="fileupload")
-                a.btn_addPic.btn.btn-default.btn-lg(href="javascript:void(0);")
-                    span
-                        i.glyphicon.glyphicon-plus
-                        | 添加文件(可同时选择多个文件)
-                    input#selectFiles.filePrew(name="pic", type="file")
-
-            .q_wrap
-                #spdiv.input-group(style="display:none;")
-                    span.input-group-addon
-                        span.glyphicon.glyphicon-home
-                    input#txt_serverPath.form-control(type="text", placeholder="请输入服务端目录")
-
-                #fileList
     .noticeWrap
 
 
@@ -53,7 +40,7 @@ block content
     script(src="/socket.io/socket.io.js")
 
     script(defer, src="/js/plugins.js")
-    script(defer, src="/js/libs/qiniu.uploader.js")
+    // script(defer, src="/js/libs/qiniu.uploader.js")
     script(defer, src="/js/perber.js")
 
 
