--- a/perber/public/css/perber.css
+++ b/perber/public/css/perber.css
@@ -725,6 +725,7 @@ body{
     background: #fff;
     text-align: center;
     line-height: 150px;
+    box-shadow: 0 0 3px rgba(0,0,0,0.2);
 }
 
 #imageThumb{
