--- a/perber/public/css/perber.css
+++ b/perber/public/css/perber.css
@@ -810,15 +810,20 @@ body{
 .ui.bottom.attached.progress.green{
     border-radius: 0;
     position: absolute;
-    top: 5px;
+    bottom: 5px;
     width: 150px;
     height: 150px;
     background: none;
 }
 
 .ui.bottom.attached.progress.green .bar{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     height: 0%;
     background:rgba(161,207,110,0.7);
+    font-size: 16px;
+    color: #fff;
 }
 
 
