--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -4,7 +4,7 @@ block content
     .wrap
         .content(role="main")
 
-            ul#Tips(style="display:none")
+            ul#Tips
                 li(id="about", class="active")
                     i(class="fa fa-circle-o")
                     span About Perber
