--- a/perber/views/themes/default/layout.jade
+++ b/perber/views/themes/default/layout.jade
@@ -17,7 +17,7 @@ html(class="no-js", lang="en")
         title Perber
 
         meta(name="description", content="")
-        meta(name="author", content="hanjiyun")
+        meta(name="author", content="J.Y Han")
         meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1, user-scalable=no")
 
         link(href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900', rel='stylesheet', type='text/css')
