--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -35,11 +35,10 @@ block content
 
     include templates/chat_tmpl
 
-    script(defer, src="/js/libs/ICanHaz.min.js")
     script(src="/socket.io/socket.io.js")
-
     script(defer, src="/js/plugins.js")
-    // script(defer, src="/js/libs/qiniu.uploader.js")
     script(defer, src="/js/perber.js")
+    // script(src="/js/plugins.min.js")
+    // script(defer, src="/js/perber.min.js")
 
 
