--- a/perber/views/themes/default/layout.jade
+++ b/perber/views/themes/default/layout.jade
@@ -24,6 +24,8 @@ html(class="no-js", lang="en")
         link(rel="stylesheet", href="/css/semantic.min.css")
         link(rel="stylesheet", href="/css/font-awesome.min.css")
         link(rel="stylesheet", href="/css/perber.css")
+        //- link(rel="stylesheet", href="/css/player.zen.css")
+        link(rel="stylesheet", href="/css/player/circle.player.css")
 
         script(type="text/javascript",src="/js/libs/jquery-2.0.3.min.js")
         script(type="text/javascript",src="/js/libs/modernizr-2.5.3.min.js")
